add some static templates to generate